@@ -1,6 +1,7 @@
   - TFTP booting from host directory (Anthony Liguori, Erwan Velu)
   - Tap device emulation for Solaris (Sittichai Palanisong)
   - Monitor multiplexing to several I/O channels (Jason Wessel)
+  - ds1225y nvram support (Herve Poussineau)
 
 version 0.9.0:
 
